[package]
name = "pv_modeling"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
actix-web = "4.11"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.14", features = ["chrono_0_4"] }
serde_json = "1.0"
toml = "0.9"
reqwest = "0.12"
chrono ="0.4"
log4rs = "1.3"
log = "0.4"
spa_sra = { version = "0.3", features = ["chrono_0_4"] }
md-5 = "0.10.6"
